[gd_scene load_steps=5 format=3 uid="uid://cxlti6bo41ija"]

[ext_resource type="PackedScene" uid="uid://bkvojy2twfmob" path="res://Screens/Systems/Ship_System.tscn" id="1_hkqgm"]
[ext_resource type="Script" uid="uid://cbmyl68867y5i" path="res://Scripts/Systems/ship_energy.gd" id="2_pvwxx"]
[ext_resource type="Texture2D" uid="uid://bsferqnagcwnt" path="res://Assets/Textures/Ships/Ship_Energy.png" id="3_wh11q"]
[ext_resource type="Texture2D" uid="uid://dr4oo0qbki4l8" path="res://Assets/Textures/EnergyBar.png" id="4_mrip0"]

[node name="ShipEnergy" instance=ExtResource("1_hkqgm")]
script = ExtResource("2_pvwxx")

[node name="SystemSprite" parent="." index="1"]
texture = ExtResource("3_wh11q")

[node name="Bars" type="Node2D" parent="." index="2"]

[node name="Bar_A1" type="Sprite2D" parent="Bars" index="0"]
visible = false
position = Vector2(1039, 551)
texture = ExtResource("4_mrip0")

[node name="Bar_Z1" type="Sprite2D" parent="Bars" index="1"]
visible = false
position = Vector2(1025, 775)
texture = ExtResource("4_mrip0")

[node name="Bar_Z2" type="Sprite2D" parent="Bars" index="2"]
visible = false
position = Vector2(1025, 740)
texture = ExtResource("4_mrip0")

[node name="Bar_X1" type="Sprite2D" parent="Bars" index="3"]
visible = false
position = Vector2(1333, 791)
texture = ExtResource("4_mrip0")

[node name="Bar_X2" type="Sprite2D" parent="Bars" index="4"]
visible = false
position = Vector2(1333, 757)
texture = ExtResource("4_mrip0")

[node name="Bar_C1" type="Sprite2D" parent="Bars" index="5"]
visible = false
position = Vector2(1623, 777)
texture = ExtResource("4_mrip0")

[node name="Bar_C2" type="Sprite2D" parent="Bars" index="6"]
visible = false
position = Vector2(1623, 740)
texture = ExtResource("4_mrip0")

[node name="Bar_S1" type="Sprite2D" parent="Bars" index="7"]
visible = false
position = Vector2(1435, 643)
texture = ExtResource("4_mrip0")

[node name="Bar_S2" type="Sprite2D" parent="Bars" index="8"]
visible = false
position = Vector2(1435, 611)
texture = ExtResource("4_mrip0")

[node name="Bar_S3" type="Sprite2D" parent="Bars" index="9"]
visible = false
position = Vector2(1436, 578)
texture = ExtResource("4_mrip0")

[node name="Bar_W1" type="Sprite2D" parent="Bars" index="10"]
visible = false
position = Vector2(1434, 466)
texture = ExtResource("4_mrip0")

[node name="Bar_W2" type="Sprite2D" parent="Bars" index="11"]
visible = false
position = Vector2(1435, 431)
texture = ExtResource("4_mrip0")

[node name="Bar_Q1" type="Sprite2D" parent="Bars" index="12"]
visible = false
position = Vector2(1224, 404)
texture = ExtResource("4_mrip0")

[node name="Bar_Q2" type="Sprite2D" parent="Bars" index="13"]
visible = false
position = Vector2(1226, 374)
texture = ExtResource("4_mrip0")

[node name="Bar_Q3" type="Sprite2D" parent="Bars" index="14"]
visible = false
position = Vector2(1223, 348)
texture = ExtResource("4_mrip0")

[node name="Bar_Q4" type="Sprite2D" parent="Bars" index="15"]
visible = false
position = Vector2(1224, 317)
texture = ExtResource("4_mrip0")

[node name="Bar_21" type="Sprite2D" parent="Bars" index="16"]
visible = false
position = Vector2(1420, 255)
texture = ExtResource("4_mrip0")

[node name="Bar_11" type="Sprite2D" parent="Bars" index="17"]
visible = false
position = Vector2(1330, 143)
texture = ExtResource("4_mrip0")
